# Pancake-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  clang-format.yml  codeql.yml
include/: Animation.hpp  AnimationRenderer.hpp  BoxCollider.hpp  Camera.hpp  Collider.cpp  Collider.hpp  Command.hpp  Component.hpp  Debug.hpp  Engine.hpp  GameLogic.hpp  GameObject.hpp  Graphics.hpp  InputHandler.hpp  Inputs.hpp  PhysicsEngine.hpp  Rigidbody.hpp  Scene.hpp  SceneManager.hpp  SpriteRenderer.hpp  SpriteSheet.hpp  Time.hpp  Transform.hpp  User.hpp  Window.hpp
include/Debug/: Debug.hpp  DebugWindow.hpp  FixedOverlayDebug.hpp  MainDebugMenu.hpp
include/Debug/Commands/: Command.hpp  CommandClear.hpp  CommandHelp.hpp  CommandLoadScene.hpp
include/Debug/Widgets/: AppLog.hpp  Console.hpp
include/GameLogic/: GameObject.hpp  Scene.hpp
include/GameLogic/Components/: AnimationRenderer.hpp  Animator.hpp  Behavior.hpp  BoxCollider.hpp  Camera.hpp  CircleCollider.hpp  Collider.hpp  Component.hpp  DataStorage.hpp  LuaScript.hpp  PythonScript.hpp  Renderer.hpp  Rigidbody.hpp  SpriteRenderer.hpp  TileMapRenderer.hpp  Transform.hpp
include/Graphics/: Animation.hpp  AssetsManager.hpp  SpriteSheet.hpp  TileMap.hpp  Window.hpp
include/Inputs/: Button.hpp  Input.hpp  InputManager.hpp
include/Parser/: SceneFactory.hpp  TmxParser.hpp
include/Physics/: Collision.cpp  Collision.hpp  PhysicsEngine.hpp  PhysicsListener.hpp  PhysicsUserData.hpp
include/User/: Box.hpp  CheckPoint.hpp  CheckPointObject.hpp  Coin.hpp  DeathZone.hpp  Enemy.hpp  GameControllerSoloObject.hpp  Ground.hpp  Health.hpp  Ladder.hpp  Laser.hpp  MainCamera.hpp  Player.hpp  PlayerController.hpp  Sandbox.hpp  Transporter.hpp  Water.hpp  enemy.hpp
include/User/Behaviors/: Bullet.hpp  BulletScript.hpp  CheckPoint.hpp  CheckPointScript.hpp  CoinGuiBehavior.hpp  ExitNoticeScript.hpp  GameController.hpp  LadderScript.hpp  LaserButtonScript.hpp  LaserScript.hpp  OnAwakeSetBoxCollider.hpp  OnTriggerDestroy.hpp  OnTriggerKill.hpp  PlayerController.hpp  PlayerScript.hpp  TrampolineScript.hpp  TransporterScript.hpp  WaterScript.hpp  enemyScript.hpp
include/User/Gui/: CoinGui.hpp  PlayerGui.hpp
include/User/Items/: Box.hpp  Bullet.hpp  BulletObject.hpp  Coin.hpp  CoinBox.hpp  ExitNotice.hpp  Ladder.hpp  Laser.hpp  LaserButton.hpp  Rock.hpp  Trampoline.hpp  Transporter.hpp  Water.hpp
include/imgui/: imconfig.h  imgui-SFML.h
include/imgui/Widgets/: AppLog.hpp
libs/: Tmx.h
libs/Box2D/: CMakeLists.txt
libs/Box2D/Dynamics/: b2Body.h
libs/Imgui/: imgui-SFML.cpp  imgui.cpp  imgui.h
libs/Imgui/extra_fonts/: binary_to_compressed_c.cpp
libs/rapidxml/: rapidxml_iterators.hpp
libs/tmxParser/: TmxLayer.cpp  TmxTileLayer.cpp  TmxTileset.cpp  TmxTileset.h  TmxUtil.cpp  tinyxml2.h
resources/: sans-titre.tmx  test.tmx
resources/maps/: arena.tmx  mapCastle.tmx  test.tmx
resources/scripts/: PlayerController.lua  test.lua  test.py
src/: Animation.cpp  AnimationRenderer.cpp  BoxCollider.cpp  Button.cpp  CMakeLists.txt  Camera.cpp  Collider.cpp  Debug.cpp  Engine.cpp  GameObject.cpp  Input.cpp  InputHandler.cpp  InputManager.cpp  PhysicsEngine.cpp  PhysicsListener.cpp  Rigidbody.cpp  Scene.cpp  SceneManager.cpp  SpriteRenderer.cpp  SpriteSheet.cpp  Time.cpp  Transform.cpp  User.cpp  Window.cpp  main.cpp
src/Debug/: Debug.cpp  MainDebugMenu.cpp
src/Debug/Widgets/: Console.cpp
src/GameLogic/: GameObject.cpp  Scene.cpp
src/GameLogic/Components/: AnimationRenderer.cpp  Animator.cpp  Behavior.cpp  BoxCollider.cpp  Camera.cpp  Collider.cpp  LuaScript.cpp  Rigidbody.cpp  SpriteRenderer.cpp  TileMapRenderer.cpp  Transform.cpp
src/Graphics/: Animation.cpp  AssetsManager.cpp  SpriteSheet.cpp  TileMap.cpp  Window.cpp
src/Inputs/: Button.cpp  Input.cpp  InputManager.cpp
src/Parser/: SceneFactory.cpp  TmxParser.cpp
src/Physics/: Collision.cpp  PhysicsEngine.cpp  PhysicsListener.cpp
src/User/: PlayerController.cpp
